--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test-connection": "node test-connection.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "cors": "^2.8.5",
-    "express-session": "^1.17.3",
-    "connect-mongo": "^5.1.0",
-    "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.3",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
