--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
